--- a/css/managerStyle.css
+++ b/css/managerStyle.css
@@ -57,7 +57,7 @@ h2 {
     align-items: center;
     width: 100%;
 }
-#EditButton, #DeleteButton {
+#EditImgButton, #DeleteImgButton {
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -175,15 +175,45 @@ tr:nth-child(odd){
     padding: 10px 0;
     display: flex;
 }
-#EditButton, #DeleteButton{
+/* #EditImgButton, #DeleteImgButton{
     margin-left: 10px;
     width: 30px;
     height: 30px;
     cursor: pointer;
-}
+} */
 #Details {
     font-weight: normal;
 }
 #PostedDate{
     font-size: 12px;
+}
+
+/* FAQ Manager */
+#Question{
+    text-align: left;
+    font-weight: bold;
+}
+#Answer{
+    text-align: left;
+    font-weight: normal;
+}
+#PostedBy{
+    text-align: left;
+    font-weight: bold;
+    font-size: 12px;
+}
+#EditButton{
+    margin-right: 10px;
+    padding: 5px 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    width: 100px;
+    background-color: #ff6a00;
+}
+#EditButton:hover{
+    background-color: #ff914d;
+    color: black;
 }
