--- a/css/managerStyle.css
+++ b/css/managerStyle.css
@@ -42,6 +42,7 @@ h2 {
     border: 1px solid #000000;
     border-radius: 5px;
     margin-bottom: 20px;
+    display: block;
 }
 
 /* News Manager */
