--- a/css/catalogueDetailsStyle.css
+++ b/css/catalogueDetailsStyle.css
@@ -1,38 +1,50 @@
-
-.event-container{
+.event-container {
     border: 2px dotted black;
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
 }
+
 .event-container {
     display: flex;
     align-items: center;
 }
+
 .event-container img {
 
     margin-right: 20px;
 }
+
 .event-details hr {
     border: 1px solid black;
     margin: 10px 0;
 }
+
 .event-details p#hostedBy {
     text-align: right;
     font-size: 12px;
     margin-bottom: 10px;
     font-weight: normal;
 }
-.event-details span#host, p {
+
+.event-details span#host,
+p {
     font-weight: bold;
 }
-.event-details span#dateAndTime, span#venue, span#fee, span#capacity, span#description {
+
+.event-details span#dateAndTime,
+span#venue,
+span#fee,
+span#capacity,
+span#description {
     font-weight: normal;
 }
+
 .event-details p {
     margin: 10px 0;
     line-height: 30px;
 }
+
 .event-details button {
     background-color: #ff914d;
     color: black;
@@ -50,18 +62,3 @@
     color: white;
     background-color: green;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
